Application icon/favicon
It's supposed to be an eyepatch with the RSS symbol on it.  Oh well.
Even an ugly icon is better than no icon.

A side effect of this work: discovered a bug in Firefox for Android
<https://bugzilla.mozilla.org/show_bug.cgi?id=913878>.  Will need to
work up a test case later.

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -3,8 +3,11 @@
     <head>
         <title>{% block title %}{{ title }}{% endblock %}</title>
         <meta name="viewport" content="width=device-width">
+        <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ STATIC_URL }}icon.ico">
+        <link rel="icon" sizes="152x152" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
+        <link rel="apple-touch-icon-precomposed" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
         {% block css %}{% endblock %}
-        <link rel=stylesheet type="text/css" href="/static/yarrharr.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}yarrharr.css">
         {% block js %}{% endblock %}
     </head>
     <body>
