--- a/yarrharr/templates/about.html
+++ b/yarrharr/templates/about.html
@@ -8,4 +8,15 @@
     <p><a href="http://radiac.net/projects/django-yarr/">django-yarr</a> {{ yarr_version }}
     <p><a href="https://www.djangoproject.com/">Django</a> {{ django_version }}
     <p><a href="https://pypi.python.org/pypi/feedparser">feedparser</a> {{ feedparser_version }}
+    <h2>License</h2>
+    <p>This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+    <p>This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+    <p>You should have received a copy of the GNU General Public License
+    along with this program.  If not, see &lt;<a href="https://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>&gt;.
 {% endblock %}
