--- a/yarrharr/templates/about.html
+++ b/yarrharr/templates/about.html
@@ -9,6 +9,7 @@
     <p><a href="https://www.djangoproject.com/">Django</a> {{ django_version }}
     <p><a href="https://pypi.python.org/pypi/feedparser">feedparser</a> {{ feedparser_version }}
     <h2>License</h2>
+    <p>Copyright © 2013 Tom Most
     <p>This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
@@ -19,4 +20,11 @@
     GNU General Public License for more details.
     <p>You should have received a copy of the GNU General Public License
     along with this program.  If not, see &lt;<a href="https://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>&gt;.
+    <p>Additional permission under GNU GPL version 3 section 7 <p>If you modify
+    this Program, or any covered work, by linking or combining it with OpenSSL
+    (or a modified version of that library), containing parts covered by the
+    terms of the OpenSSL License, the licensors of this Program grant you
+    additional permission to convey the resulting work.  Corresponding Source
+    for a non-source form of such a combination shall include the source code
+    for the parts of OpenSSL used as well as that of the covered work.
 {% endblock %}
