Fix: don't show prev/next icons in Android browser
It doesn't support un-prefixed CSS gradients yet (at least in
CyanogenMod 9).

--- a/assets/yarrharr.less
+++ b/assets/yarrharr.less
@@ -25,6 +25,7 @@ body {
 .yarr_control li span,
 .yarr_control .yarr_nav a {
     padding: 10px 20px;
+    background: white; /* Old Android */
     background: linear-gradient(to bottom, #fefefe, white 10px, #eeeeee);
     color: #555;
     font-weight: normal;
@@ -47,6 +48,7 @@ body {
 .yarr_control li span:active,
 .yarr_control li a.yarr_selected,
 .yarr_control li span.yarr_selected {
+    background: #dedede; /* Old Android */
     background: linear-gradient(to bottom, #dedede, #ddd 10px, #eeeeee);
     color: #101010;
 }
