--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -2,15 +2,37 @@
 <html lang="en_US">
     <head>
         <title>{% block title %}{{ title }}{% endblock %}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, user-scalable=false">
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ STATIC_URL }}icon.ico">
         <link rel="icon" sizes="152x152" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
-        {% block css %}{% endblock %}
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}yarrharr.css">
         {% block js %}{% endblock %}
+        <script>
+        if (window.$) {
+            $(function() {
+                $('.yarr_content').on('click', 'img', function(e) {
+                    $('<div style="color:blue">').text(e.target.title).insertAfter(e.target);
+                });
+            });
+        }
+        </script>
     </head>
     <body>
-        {% block content %}{% endblock %}
+        <main role=main>
+            {% if messages %}
+                <ul class=messages>
+                    {% for message in messages %}
+                        <li class="{{ message.tags }}">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% block content %}{% endblock %}
+        </main>
+        <footer>
+            <p>Yarrharr Feed Reader ∙ © 2013, 2014 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'yarrharr-about' %}">About</a>
+            <br>
+            <a href="https://www.gnome.org/" target="_blank">Icons by the GNOME Project</a> ∙  <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA 3.0 US</a>
+        </footer>
     </body>
 </html>
