--- a/yarrharr/templates/login.html
+++ b/yarrharr/templates/login.html
@@ -1,18 +1,14 @@
 {% extends "base.html" %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
-    <h1>Login</h1>
-    <form method=post action="{% url 'django.contrib.auth.views.login' %}">
+    <form method=post action="{% url 'django.contrib.auth.views.login' %}" class="yarrharr_login small_form">
+        <h1>Login</h1>
 
-        {% if form.errors %}
-            <p>Login failed; try again?</p>
-        {% endif %}
+        {{ form.as_p }}
 
-        <table>
-            {{ form.as_table }}
-        </table>
-
-        <p>
+        <p class=actions>
             <input type=submit value="Login">
             <input type=hidden value="{{ next }}">
             {% csrf_token %}
