--- a/assets/yarrharr.less
+++ b/assets/yarrharr.less
@@ -518,6 +518,8 @@ select {
 }
 
 .yarr_entry_content {
+    word-wrap: break-word; /* Don't let long lines break the layout */
+
     h2 {
         font-size: 24px;
         line-height: 30px;
