Fix feed list :active color

--- a/assets/yarrharr.less
+++ b/assets/yarrharr.less
@@ -407,7 +407,8 @@ select {
         padding: 0;
         line-height: 1.5;
 
-        a {
+        a:link,
+        a:visited {
             position: relative;
             display: block;
             padding: 5px 30px 5px 10px;
@@ -439,7 +440,8 @@ select {
 
     }
 
-    .yarr_menu_feeds li a {
+    .yarr_menu_feeds li a:link,
+    .yarr_menu_feeds li a:visited {
         font-weight: 600;
     }
 }
