Restore missing border below entries

--- a/assets/yarrharr.less
+++ b/assets/yarrharr.less
@@ -493,6 +493,7 @@ select {
 
 .yarr_entry {
     position: relative; /* Positioning context for ::before icon */
+    border-bottom: 1px solid @border_color;
 }
 
 /* An icon indicating unread/read/saved status to the left of the header.  In
