Time marches on

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -30,7 +30,7 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
-            <p>Yarrharr Feed Reader ∙ © 2013, 2014 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'yarrharr-about' %}">About</a>
+            <p>Yarrharr Feed Reader ∙ © 2013–2015 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'yarrharr-about' %}">About</a>
             <br>
             <a href="https://www.gnome.org/" target="_blank">Icons by the GNOME Project</a> ∙  <a href="https://creativecommons.org/licenses/by-sa/3.0/" target="_blank">CC BY-SA 3.0 US</a>
         </footer>
