--- a/yarrharr/templates/about.html
+++ b/yarrharr/templates/about.html
@@ -10,7 +10,7 @@
     <p><a href="https://pypi.python.org/pypi/feedparser">feedparser</a> {{ feedparser_version }}
     <p><a href="https://git.gnome.org/browse/gnome-icon-theme-symbolic/">GNOME Symbolic Icons</a> by <a href="https://www.gnome.org/">GNOME Project</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
     <h2>License</h2>
-    <p>Copyright © 2013, 2014 Tom Most
+    <p>Copyright © 2013, 2014, 2015 Tom Most
     <p>This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
