Crude prototype UI in React
It can list feeds and switch between them, and also switch between
"all", "new", "saved", and "read" filter states.  No paging, and no feed
content yet.  Also quite ugly.

--- a/yarrharr/templates/index.html
+++ b/yarrharr/templates/index.html
@@ -3,9 +3,9 @@
 {% block title %}Yarrharr{% endblock %}
 
 {% block content %}
-<noscript>
-    <h1>JavaScript Required</h1>
-    <p>Please enable JavaScript to continue.</p>
-</noscript>
 <script src="{{ STATIC_URL }}bundle.js"></script>
+<script>
+    React.initializeTouchEvents(true);
+    React.render(React.createElement(Yarrharr, {{ props|safe }}), document.body);
+</script>
 {% endblock %}
