--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en_US">
     <head>
         <title>{% block title %}{{ title }}{% endblock %}</title>
-        <meta name="viewport" content="width=device-width, user-scalable=false">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
         <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ STATIC_URL }}icon.ico">
         <link rel="icon" sizes="152x152" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
