Toolbar button for switching feeds
Instead of wasting screen space on the feed list, which is too long to
actually find anything in anyway, we'll move it to a specialized widget.
For the moment that's just an ugly modal dialog with a list of feeds.

--- a/assets/toolbar.less
+++ b/assets/toolbar.less
@@ -5,5 +5,7 @@
     right: 0;
     height: 40px;
     background: salmon;
-    line-height: 40px;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
 }
