Use <button> for accessibility

--- a/assets/view-picker.less
+++ b/assets/view-picker.less
@@ -13,7 +13,7 @@
         flex-align: start;
         padding: 10px;
 
-        span {
+        button {
             flex: none;
             margin-right: 20px;
         }
