Crude feed icons
This will definitely need to be fixed to do server-side lookup/caching.

--- a/assets/feed-picker.less
+++ b/assets/feed-picker.less
@@ -12,4 +12,10 @@
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+
+    img {
+        width: 16px;
+        height: 16px;
+        margin-right: 0.5em;
+    }
 }
