--- a/assets/feed-picker.less
+++ b/assets/feed-picker.less
@@ -1,3 +1,5 @@
+@import "./globals.less";
+
 .feed-picker {
     ul {
         display: flex;
@@ -6,7 +8,7 @@
     li {
         list-style-type: none;
         box-sizing: border-box;
-        padding: 5px 10px;
+        padding: 8px 16px;
         width: 100%;
         overflow: hidden;
         text-overflow: ellipsis;
