--- a/assets/globals.less
+++ b/assets/globals.less
@@ -5,3 +5,25 @@
 @background_color: #111;
 @text_color: #eee;
 @toolbar_height: 40px;
+
+
+.grid(@background; @color) {
+    /*
+    @grid_size: 4px;
+    @grid_line: 0.5px;
+    background:
+        repeating-linear-gradient(
+            to bottom,
+            transparent,
+            transparent (@grid_size - @grid_line),
+            @color (@grid_size - @grid_line),
+            @color @grid_size),
+        repeating-linear-gradient(
+            to right,
+            transparent,
+            transparent (@grid_size - @grid_line),
+            @color (@grid_size - @grid_line),
+            @color @grid_size),
+        @background;
+    /**/
+}
