--- a/assets/base.less
+++ b/assets/base.less
@@ -6,7 +6,14 @@
 
 html {
     background: @background_color;
+    .grid(@background_color; lighten(@background_color, 05%));
+
     color: @text_color;
+    font-size: 14px;
+    line-height: 28px;
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 a[href] {
