Don't include the old stylesheet
It was interfering with the new styles, causing much confusion.

--- a/yarrharr/templates/index.html
+++ b/yarrharr/templates/index.html
@@ -1,11 +1,17 @@
-{% extends "base.html" %}
-
-{% block title %}Yarrharr{% endblock %}
-
-{% block content %}
-<script src="{{ STATIC_URL }}bundle.js"></script>
-<script>
-    React.initializeTouchEvents(true);
-    React.render(React.createElement(Yarrharr, {{ props|safe }}), document.body);
-</script>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en_US">
+    <head>
+        <title>Yarrharr</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ STATIC_URL }}icon.ico">
+        <link rel="icon" sizes="152x152" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
+        <link rel="apple-touch-icon-precomposed" type="image/png" href="{{ STATIC_URL }}icon.touch.png">
+    </head>
+    <body>
+        <script src="{{ STATIC_URL }}bundle.js"></script>
+        <script>
+            React.initializeTouchEvents(true);
+            React.render(React.createElement(Yarrharr, {{ props|safe }}), document.body);
+        </script>
+    </body>
+</html>
