--- a/assets/list-article.less
+++ b/assets/list-article.less
@@ -35,6 +35,7 @@
 
         .feed {
             flex: 1 1 100%;
+            width: 0; // Allow it to shrink so content ellipsizes.
             overflow: hidden;
             text-overflow: ellipsis;
         }
