Unfix toolbar, style buttons
* Unfix the toolbar because it's not really a useful use of screen space
  at this point.
* Style the buttons a little so they are somewhat less hideous.  Still
  the wrong widgets, though...

--- a/assets/globals.less
+++ b/assets/globals.less
@@ -9,6 +9,10 @@
 @content_text_color: rgb(20, 20, 20);
 @content_background_color: rgba(250, 250, 250, 1.0);
 
+@logo_orange_light: #f17e31;
+@logo_orange: #fb6500;
+@logo_orange_dark: #da5200;
+
 .grid(@background; @color) {
     /*
     @grid_size: 4px;
